# chimichurri

./: .flake8  .gitignore  .pre-commit-config.yaml  backtesting.py  main.ipynb  main.py  pyproject.toml  run_backtesting.py
.streamlit/: config.toml
chimi/: __init__.py  indicator.py  strategy.py  viz.py
chimi/indicators/: __init__.py  variable_moving_average.py
chimi/viz/: candlesticks.py
tests/: test_strategy.py
