[tool.poetry]
name = "chimichurri"
version = "0.1.0"
description = ""
authors = ["gzarruk <gzarruk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
v20 = "^3.0.25.0"
streamlit = "^1.17.0"
pandas = "^1.5.2"
plotly = "^5.12.0"
watchdog = "^2.2.1"
tpqoa = {git = "https://github.com/yhilpisch/tpqoa.git"}
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
